added nake dand hidden singles processors